// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BottomSheet Component onLayout should be called 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "maxHeight": 300,
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "borderColor": "#bcbbc1",
              "flexDirection": "row",
              "padding": 14,
            }
          }
          testID="padView"
        >
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "flex": 1,
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                Object {
                  "backgroundColor": "transparent",
                  "color": "#242424",
                  "fontSize": 17,
                }
              }
              testID="listItemTitle"
            >
              test
            </Text>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "borderColor": "#bcbbc1",
              "flexDirection": "row",
              "padding": 14,
            }
          }
          testID="padView"
        >
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "flex": 1,
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                Object {
                  "backgroundColor": "transparent",
                  "color": "#242424",
                  "fontSize": 17,
                }
              }
              testID="listItemTitle"
            >
              test2
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`BottomSheet Component renders correctly 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "rgba(0,0,0,0.2)",
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "column-reverse",
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "maxHeight": 300,
          }
        }
      >
        <RCTScrollView>
          <View>
            <View>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#ffffff",
                    "borderColor": "#bcbbc1",
                    "flexDirection": "row",
                    "padding": 14,
                  }
                }
                testID="padView"
              >
                <View
                  style={
                    Object {
                      "alignItems": "flex-start",
                      "flex": 1,
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "backgroundColor": "transparent",
                        "color": "#242424",
                        "fontSize": 17,
                      }
                    }
                    testID="listItemTitle"
                  >
                    test
                  </Text>
                </View>
              </View>
            </View>
            <View>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#ffffff",
                    "borderColor": "#bcbbc1",
                    "flexDirection": "row",
                    "padding": 14,
                  }
                }
                testID="padView"
              >
                <View
                  style={
                    Object {
                      "alignItems": "flex-start",
                      "flex": 1,
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "backgroundColor": "transparent",
                        "color": "#242424",
                        "fontSize": 17,
                      }
                    }
                    testID="listItemTitle"
                  >
                    test2
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </RCTScrollView>
      </View>
    </View>
  </RCTSafeAreaView>
</Modal>
`;
